ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Producing_Plant_Warranty__mdt/Producing_Plant_Warranty__mdt.object-meta.xml
<CustomObject>
    <description>Used to store details around producting plant warranty terms and prorated calculations</description>
    <label>Producing Plant Warranty</label>
    <pluralLabel>Producing Plant Warranties</pluralLabel>
</CustomObject>