ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Producing_Plant_Warranty__mdt/fields/Iron_Clad_Period__c.field-meta.xml
<CustomField>
    <fullName>Iron_Clad_Period__c</fullName>
    <label>Iron Clad Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>