ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Producing_Plant_Warranty__mdt/fields/Period_1_End__c.field-meta.xml
<CustomField>
    <fullName>Period_1_End__c</fullName>
    <label>Period 1 End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>