ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Producing_Plant_Warranty__mdt/fields/Period_2_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_2_Start__c</fullName>
    <label>Period 2 Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>