ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Producing_Plant_Warranty__mdt/fields/Period_3_Rate__c.field-meta.xml
<CustomField>
    <fullName>Period_3_Rate__c</fullName>
    <label>Period 3 Rate</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Number</type>
</CustomField>