ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Producing_Plant_Warranty__mdt/fields/Reduction_Periods__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Periods__c</fullName>
    <label>Reduction Periods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>