ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Producing_Plant_Warranty__mdt/fields/Reduction_Type__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Type__c</fullName>
    <label>Reduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AddRanges</fullName>
                <default>true</default>
                <label>AddRanges</label>
            </value>
            <value>
                <fullName>SpecificRange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>